--- a/public/index.html
+++ b/public/index.html
@@ -270,7 +270,7 @@ html{
 <div class="container fader" id="container">
 <div>
   <div class="logo"></div>
-  <div class="headline">Smart Shopping</div><br/>
+  <div class="headline">Smart Shopping2.0</div><br/>
   <div class="description">Say hello to hassle-free shopping! Share your shopping list and cherrypick sets up everything for a fast shopping experience in store!</div>
 
   <div class="button-container">
