--- a/public/steps.html
+++ b/public/steps.html
@@ -18,6 +18,44 @@ html{
     background-color: #ffffff;
     font-family: 'Quicksand', sans-serif;
 }
+.item {
+    position: relative;
+    bottom: 110px;
+}
+
+.item h2 {
+    text-align:center;
+    position: absolute;
+    line-height: 125px;
+    width: 100%;
+    top: 16px;
+}
+
+svg {
+   -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    stroke-width: 8px;
+}
+
+.circle_animation {
+  stroke-dasharray: 440; /* this value is the pixel circumference of the circle */
+  stroke-dashoffset: 440;
+  transition: all 1s linear;
+}
+.speak {
+  display: none;
+}
+
+.searched-image {
+  width: 85px;
+  margin-top: 80px;
+  border-radius: 171px;
+  height: 83px;
+}
+
+.result {
+  display: none;
+}
 .content {
   position: relative;
   margin: 0 auto;
@@ -215,6 +253,19 @@ html{
     50% {opacity: 1.0;}
     100% {-webkit-transform: scale(1.5, 1.5); opacity: 0.0;}
 }
+
+.circle_animation {
+  stroke-dasharray: 440; /* this value is the pixel circumference of the circle */
+  stroke-dashoffset: 440;
+  transition: all 1s linear;
+}
+
+.animation {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+}
+
 .close {
   text-align: center;
   display: none;
