--- a/public/steps.html
+++ b/public/steps.html
@@ -52,7 +52,22 @@ svg {
   border-radius: 171px;
   height: 83px;
 }
-
+.searched-image-shop {
+    width: 85px;
+    margin-top: 40px;
+    border-radius: 171px;
+    height: 83px;
+}
+#shoppingList {
+  position: absolute;
+    top: 78px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 300px;
+    height: 311px;
+    overflow: scroll;
+}
 .result {
   display: none;
 }
