--- a/public/steps.html
+++ b/public/steps.html
@@ -37,6 +37,12 @@ svg {
     stroke-width: 8px;
 }
 
+.arrow-image {
+  width: 100px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+}
 .circle_animation {
   stroke-dasharray: 440; /* this value is the pixel circumference of the circle */
   stroke-dashoffset: 440;
@@ -1062,6 +1068,7 @@ p img.right { float: right; margin-left: 1em; }
 <!--Bundled file-->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"></script>
 <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+<script src="scripts/shortest-path.js"></script>
 <script src="wiz.bundle.min.js"></script>
 
 <script language="javascript">
