--- a/public/steps.html
+++ b/public/steps.html
@@ -43,6 +43,14 @@ svg {
     left: 0;
     right: 0;
 }
+.bottom-button {
+    z-index: 0;
+    bottom: 20px;
+    position: fixed !important;
+    margin: 0 auto !important;
+    left: 0;
+    right: 0;
+}
 .circle_animation {
   stroke-dasharray: 440; /* this value is the pixel circumference of the circle */
   stroke-dashoffset: 440;
